# http_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
cmake/: BoostTestHelpers.cmake
include/http/: connection.h  headers.h  http_version.h  i_logger.h  nologger.h  prototypes.h  request_header.h  request_method.h  response_builder.h  response_header.h  response_parser.h  response_parser_exception.h  rfc2616_response_parser.h  server.h  server_request.h  server_request_builder.h  server_response.h  server_response_builder.h  status_code.h  stdafx.h  stdlogger.h  ti_response_parser.h
include/http/impl/boost/: boost.h  boost_server_impl.h  boost_static_context.h
include/http/standards/: rfc2616.h  rfc2616_response_builder_impl.h  rfc2616_response_parser_impl.h
include/http/utilities/: default_value_type_caster.h  string_manip.h  value_caster_concept.h
testapp/: CMakeLists.txt  http_server.cpp  request.cpp  response.cpp  testmain.cpp
